# german-maxtext-llms

./: README.md
brötchen-model/: README.md  pyproject.toml
brötchen-model/datatrove-pipeline/vocab-corpus/: finepdfs_english.py  finepdfs_german.py  fineweb_edu_english.py
brötchen-model/pipeline/: build_array_record_dataset.py  count_subtokens.py  start_pipeline.py  token_limiter.py
brötchen-model/pipeline/configs/: 30-50-5-5-10-mix.yaml  vocab-corpus.yaml
brötchen-model/pipeline/configs/30-50-5-5-10-mix/: finepdfs_english.yaml  finepdfs_german.yaml  fineweb2_german.yaml  fineweb_edu_english.yaml  fineweb_english.yaml
brötchen-model/pipeline/vocab-corpus/: fineweb2_german.py  fineweb_english.py
nano-model/: README.md  pyproject.toml
nano-model/gpt-neox-tokenizer/: train_tokenizer.py
nano-model/nanochat-tokenizer/: tokenizer.py  train_tokenizer.py
