[project]
name = "broetchen-model"
version = "0.1.0"
description = "Building Brötchen Model for German MaxText LLMs"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "array-record>=0.8.1",
    "datasets>=4.4.1",
    "datatrove>=0.6.0",
    "orjson>=3.11.4",
    "pyarrow>=22.0.0",
    "tabulate>=0.9.0",
    "tensorflow-cpu>=2.20.0",
    "transformers>=4.57.3",
]
